--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -100,7 +100,7 @@
                 android:paddingRight="60dp"
                 android:paddingLeft="60dp"
                 android:textColor="@color/white"
-                android:background="@drawable/login_btn_background"
+                android:background="@drawable/buttonstyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Next"
