--- a/app/src/main/res/layout/fragment_profile_other_team.xml
+++ b/app/src/main/res/layout/fragment_profile_other_team.xml
@@ -132,7 +132,13 @@
                             android:text="123"
                             android:textStyle="bold"></TextView>
                     </LinearLayout>
+
                     <Button
+                        android:visibility="gone"
+                        android:paddingRight="20dp"
+                        android:paddingLeft="20dp"
+                        android:textColor="@color/white"
+                        android:background="@drawable/buttonstyle"
                         android:id="@+id/btnJoin"
                         android:drawableStart="@drawable/ic_baseline_join_24_green"
                         android:text="Join Team"
@@ -142,6 +148,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"></Button>
                     <Button
+
+                        android:paddingRight="20dp"
+                        android:paddingLeft="20dp"
+                        android:textColor="@color/white"
+                        android:background="@drawable/buttonstyle"
                         android:visibility="gone"
                         android:id="@+id/btnCancel"
                         android:drawableStart="@drawable/ic_baseline_join_24_green"
