--- a/app/src/main/res/layout/activity_email_registration.xml
+++ b/app/src/main/res/layout/activity_email_registration.xml
@@ -134,7 +134,7 @@
                 android:paddingRight="40dp"
                 android:paddingLeft="40dp"
                 android:textColor="@color/white"
-                android:background="@drawable/login_btn_background"
+                android:background="@drawable/buttonstyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Registration"
