--- a/app/src/main/res/layout/fragment_edit_main_player.xml
+++ b/app/src/main/res/layout/fragment_edit_main_player.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.example.myclub.data.session.SessionUser"></import>
+        <import type="com.example.myclub.session.SessionUser"></import>
     </data>
 
 
@@ -46,6 +46,7 @@
             app:layout_constraintTop_toBottomOf="@id/toolbar">
 
             <LinearLayout
+                android:paddingHorizontal="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -172,6 +173,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_margin="5dp"
                         android:drawableStart="@drawable/name_icon"
                         android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
@@ -180,6 +182,7 @@
                         android:textSize="16dp"  />
 
                     <TextView
+                        android:layout_margin="5dp"
                         android:drawableStart="@drawable/ic_baseline_phone_24_green"
                         android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
@@ -189,6 +192,7 @@
                        />
 
                     <TextView
+                        android:layout_margin="5dp"
                         android:drawableStart="@drawable/email_icon"
                         android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
@@ -196,6 +200,15 @@
                         android:text="@{SessionUser.getInstance().playerLiveData.email}"
                         android:textSize="16dp"
                        />
+                    <TextView
+                        android:layout_margin="5dp"
+                        android:drawableStart="@drawable/address_icon"
+                        android:drawablePadding="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{SessionUser.getInstance().playerLiveData.address}"
+                        android:textSize="16dp"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
@@ -226,6 +239,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_margin="5dp"
                         android:drawableStart="@drawable/birthday"
                         android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
@@ -235,6 +249,7 @@
                        />
 
                     <TextView
+                        android:layout_margin="5dp"
                         android:drawableStart="@drawable/weight_icon"
                         android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
@@ -245,15 +260,16 @@
                         />
 
                     <TextView
+                        android:layout_margin="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
                         android:drawableStart="@drawable/height_icon"
                         android:drawablePadding="5dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:text="@{Integer.toString(SessionUser.getInstance().playerLiveData.height)}"
-                        android:textSize="16dp"
-                        />
+                        android:textSize="16dp" />
 
                     <TextView
+                        android:layout_margin="5dp"
                         android:drawableStart="@drawable/position"
                         android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
@@ -263,6 +279,7 @@
                         />
 
                     <TextView
+                        android:layout_margin="5dp"
                         android:drawableStart="@drawable/foot"
                         android:drawablePadding="5dp"
                         android:layout_width="wrap_content"
@@ -298,6 +315,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:layout_margin="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:text="@{SessionUser.getInstance().playerLiveData.introduce}"
