--- a/app/src/main/res/layout/fragment_edit_main_team.xml
+++ b/app/src/main/res/layout/fragment_edit_main_team.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
+        <import type="com.example.myclub.session.SessionTeam"></import>
     </data>
 
 
@@ -155,7 +155,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
-                        android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
+                        android:text="@{SessionTeam.getInstance().teamLiveData.name}"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
@@ -163,7 +163,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                        android:text="@{TeamViewModel.getInstance().teamLiveData.email}"
+                        android:text="@{SessionTeam.getInstance().teamLiveData.email}"
                         android:textSize="16dp"
                         android:textStyle="bold" />
 
@@ -171,14 +171,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_phone_24_green"
-                        android:text="@{TeamViewModel.getInstance().teamLiveData.phone}"
+                        android:text="@{SessionTeam.getInstance().teamLiveData.phone}"
                         android:textSize="16dp"
                         android:textStyle="bold" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_baseline_phone_24_green"
-                        android:text="@{TeamViewModel.getInstance().teamLiveData.address}"
+                        android:text="@{SessionTeam.getInstance().teamLiveData.address}"
                         android:textSize="16dp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -212,7 +212,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:text="@{TeamViewModel.getInstance().teamLiveData.introduce}"
+                    android:text="@{SessionTeam.getInstance().teamLiveData.introduce}"
                     android:textStyle="bold" />
             </LinearLayout>
         </ScrollView>
