--- a/app/src/main/res/layout/fragment_edit_team_basic_.xml
+++ b/app/src/main/res/layout/fragment_edit_team_basic_.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
+        <import type="com.example.myclub.session.SessionTeam"></import>
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
+                android:text="@{SessionTeam.getInstance().teamLiveData.name}"
                 android:id="@+id/txtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="@{TeamViewModel.getInstance().teamLiveData.phone}"
+                android:text="@{SessionTeam.getInstance().teamLiveData.phone}"
                 android:id="@+id/txtPhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="@{TeamViewModel.getInstance().teamLiveData.email}"
+                android:text="@{SessionTeam.getInstance().teamLiveData.email}"
                 android:id="@+id/txtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
@@ -95,7 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="@{TeamViewModel.getInstance().teamLiveData.address}"
+                android:text="@{SessionTeam.getInstance().teamLiveData.address}"
                 android:id="@+id/txtAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
