--- a/app/src/main/res/layout/fragment_edit_team_introduce_.xml
+++ b/app/src/main/res/layout/fragment_edit_team_introduce_.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
+        <import type="com.example.myclub.session.SessionTeam"></import>
     </data>
 
 
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
-                android:text="@{TeamViewModel.getInstance().teamLiveData.introduce}"
+                android:text="@{SessionTeam.getInstance().teamLiveData.introduce}"
                 android:id="@+id/txtIntroduce"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
