--- a/app/src/main/res/layout/fragment_list_match.xml
+++ b/app/src/main/res/layout/fragment_list_match.xml
@@ -12,6 +12,7 @@
     android:layout_height="match_parent"
 >
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="#d1e0e0"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -37,14 +38,14 @@
                 android:id="@+id/btnDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tìm kiếm:"
+               android:drawableStart="@drawable/seach_icon"
                 android:textSize="20dp"></TextView>
 
             <EditText
                 android:id="@+id/txtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="tên cầu thủ"/>
+                android:hint="input name match"/>
         </LinearLayout>
 
 
