--- a/app/src/main/res/layout/fragment_list_player.xml
+++ b/app/src/main/res/layout/fragment_list_player.xml
@@ -7,6 +7,7 @@
         <import type="android.view.View" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="#d1e0e0"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -25,21 +26,15 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="List player"
-                        android:textSize="30dp"></TextView>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:id="@+id/btnDetail"
+                            android:drawableStart="@drawable/seach_icon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Tìm kiếm:"
                             android:textSize="20dp"></TextView>
 
                         <EditText
