--- a/app/src/main/res/layout/fragment_main_field.xml
+++ b/app/src/main/res/layout/fragment_main_field.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="List Team"
+                    android:text="List Field"
                 android:gravity="center_vertical"
                 android:textSize="20dp"
                 android:layout_weight="1"/>
