--- a/app/src/main/res/layout/fragment_main_match.xml
+++ b/app/src/main/res/layout/fragment_main_match.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="Information Field"
+                android:text="List Match"
                 android:gravity="center_vertical"
                 android:textSize="20dp"
                 android:layout_weight="1"/>
