--- a/app/src/main/res/layout/fragment_profile_my_team.xml
+++ b/app/src/main/res/layout/fragment_profile_my_team.xml
@@ -4,11 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
+        <import type="com.example.myclub.session.SessionTeam"></import>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
     android:orientation="vertical"
-    android:background="@color/white"
+        android:background="#d1e0e0"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -85,7 +85,7 @@
                     android:textSize="25dp"
                     android:gravity="center"
                     android:id="@+id/lblName"
-                    android:text="@{TeamViewModel.getInstance().teamLiveData.name}"
+                    android:text="@{SessionTeam.getInstance().teamLiveData.name}"
                     app:layout_constraintTop_toBottomOf="@id/avatar"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -101,16 +101,15 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:text="@{TeamViewModel.getInstance().teamLiveData.level}"
-                        android:textStyle="bold"
-                        android:drawableStart="@drawable/ic_baseline_home_24"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        ></TextView>
+                        android:drawableStart="@drawable/level_icon"
+                        android:text="Basic"
+                        android:textStyle="bold"></TextView>
                     <TextView
-                        android:text="123"
+                        android:text="100"
                         android:textStyle="bold"
-                        android:drawableStart="@drawable/ic_baseline_home_24"
+                        android:drawableStart="@drawable/reputation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         ></TextView>
@@ -118,8 +117,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_baseline_home_24"
-                        android:text="123"
+                        android:drawableStart="@drawable/rating_icon"
+                        android:text="8.8"
                         android:textStyle="bold"></TextView>
                 </LinearLayout>
 
