--- a/app/src/main/res/layout/fragment_profile_team_basic.xml
+++ b/app/src/main/res/layout/fragment_profile_team_basic.xml
@@ -1,67 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <import type="com.example.myclub.viewModel.TeamViewModel"></import>
+
+        <import type="com.example.myclub.session.SessionTeam"></import>
     </data>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    //Inforcontact
-    <LinearLayout
-        android:layout_marginHorizontal="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listGridData"
-        android:id="@+id/inforContact"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:textSize="20dp"
-            android:text="Contact"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
-
-        <TextView
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:id="@+id/phone"
-            android:drawableStart="@drawable/ic_baseline_phone_24_green"
-            android:text="@{TeamViewModel.getInstance().teamLiveData.phone}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
-        <TextView
-            android:textStyle="bold"
-            android:id="@+id/email"
-            android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-            android:text="@{TeamViewModel.getInstance().teamLiveData.email}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
-        <TextView
-            android:textStyle="bold"
-            android:id="@+id/address"
-            android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-            android:text="@{TeamViewModel.getInstance().teamLiveData.address}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
-
-
-        <TextView
-            android:textSize="20dp"
-            android:text="Introduce"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
-        <TextView
-            android:text="@{TeamViewModel.getInstance().teamLiveData.introduce}"
-            android:textStyle="bold"
+        android:layout_height="match_parent">
+      <androidx.cardview.widget.CardView
+          android:background="@color/white"
+          app:cardCornerRadius="10dp"
+          app:layout_constraintTop_toTopOf="parent"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"></TextView>
+            android:layout_height="match_parent"
+            android:layout_gravity=""
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingHorizontal="20dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Contact"
+                android:textSize="24dp"
+                android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_baseline_phone_24_green"
+                android:padding="5dp"
+                android:text="@{SessionTeam.getInstance().teamLiveData.phone}"
+                android:textSize="16dp"
+
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/email_icon"
+                android:padding="5dp"
+                android:text="@{SessionTeam.getInstance().teamLiveData.email}"
+                android:textSize="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/address_icon"
+                android:padding="5dp"
+                android:text="@{SessionTeam.getInstance().teamLiveData.address}"
+                android:textSize="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Introduce"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:padding="5dp"
+                android:text="@{SessionTeam.getInstance().teamLiveData.introduce}"
+                android:textSize="16dp" />
+
+
+        </LinearLayout>
+      </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
