--- a/app/src/main/res/layout/item_field_vertical.xml
+++ b/app/src/main/res/layout/item_field_vertical.xml
@@ -9,62 +9,60 @@
             name="field"
             type="com.example.myclub.model.Field" />
     </data>
-<androidx.cardview.widget.CardView
-    android:id="@+id/cardView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:contentPadding="10dp"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="10dp"
-   >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
 
-        <ImageView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/avatarTeam"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/cover_field"
-            />
-        <TextView
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/namePlayer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{field.name}"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/avatarTeam"
-            app:layout_constraintBottom_toTopOf="@+id/position"
-            />
-        <TextView
-            android:layout_marginLeft="10dp"
-            android:id="@+id/position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{field.address}"
-            app:layout_constraintTop_toBottomOf="@+id/namePlayer"
-            app:layout_constraintLeft_toRightOf="@id/avatarTeam"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-            <TextView
-                 android:id="@+id/numberShirt"
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:contentPadding="10dp"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="10dp"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:text="10"
-                android:textSize="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/avatarTeam"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/field"
+                />
+            <TextView
+                android:drawableStart="@drawable/name_icon"
+                android:drawablePadding="5dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:id="@+id/namePlayer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-
-                >
-
-            </TextView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+                android:text="@{field.name}"
+                android:hint="Name Team"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/avatarTeam"
+                app:layout_constraintBottom_toTopOf="@+id/position"
+                />
+            <TextView
+                android:drawableStart="@drawable/address_icon"
+                android:drawablePadding="5dp"
+                android:layout_marginLeft="10dp"
+                android:id="@+id/position"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Adress Field"
+                android:text="@{field.address}"
+                app:layout_constraintTop_toBottomOf="@+id/namePlayer"
+                app:layout_constraintLeft_toRightOf="@id/avatarTeam"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:singleLine="true"
+                android:scrollHorizontally="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
