--- a/app/src/main/res/layout/item_match_vertical.xml
+++ b/app/src/main/res/layout/item_match_vertical.xml
@@ -121,6 +121,7 @@
                 android:text="12h 30" />
 
             <TextView
+                android:hint="status"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/time"
                 app:layout_constraintRight_toRightOf="parent"
