--- a/app/src/main/res/layout/item_player_vertical.xml
+++ b/app/src/main/res/layout/item_player_vertical.xml
@@ -25,11 +25,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/avatarPlayer"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             app:srcCompat="@drawable/avatar_player_default"
             />
         <TextView
+            android:drawableStart="@drawable/name_icon"
+            android:drawablePadding="5dp"
+            android:hint="name player"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
             android:id="@+id/namePlayer"
@@ -41,17 +44,21 @@
             app:layout_constraintBottom_toTopOf="@+id/position"
             />
         <TextView
+            android:drawableStart="@drawable/position"
+            android:drawablePadding="5dp"
+            android:hint="position"
             android:layout_marginLeft="10dp"
             android:id="@+id/position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{player.phone}"
+            android:text="@{player.position}"
             app:layout_constraintTop_toBottomOf="@+id/namePlayer"
             app:layout_constraintLeft_toRightOf="@id/avatarPlayer"
             app:layout_constraintBottom_toBottomOf="parent"
             />
-            <TextView
-                 android:id="@+id/numberShirt"
+            <ImageView
+                 android:id="@+id/btnCall"
+                android:src="@drawable/ic_baseline_phone_24_green"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -59,8 +66,19 @@
                 android:textSize="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
-            </TextView>
+            </ImageView>
+        <ImageView
+            android:paddingRight="20dp"
+            android:id="@+id/btnMess"
+            android:src="@drawable/message_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/btnCall"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="10"
+            android:textSize="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </ImageView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
