--- a/app/src/main/res/layout/loading_layout.xml
+++ b/app/src/main/res/layout/loading_layout.xml
@@ -7,8 +7,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/custom_loading_gif_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/loading"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
