--- a/app/src/main/res/layout/fragment_list_queue_team.xml
+++ b/app/src/main/res/layout/fragment_list_queue_team.xml
@@ -40,7 +40,7 @@
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:text="Join Game"
-                    android:textColor="@color/white"></Button>
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
@@ -72,7 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Việc chọn đội đã hoàn thành"></TextView>
+                android:text="Việc chọn đội đã hoàn thành"/>
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
