--- a/app/src/main/res/layout/fragment_list_callendar.xml
+++ b/app/src/main/res/layout/fragment_list_callendar.xml
@@ -57,7 +57,7 @@
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnCreateTeam"
+            android:id="@+id/btnCreateMatch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add_white_24"
