--- a/app/src/main/res/layout/fragment_profile_my_team.xml
+++ b/app/src/main/res/layout/fragment_profile_my_team.xml
@@ -31,6 +31,14 @@
                 android:gravity="center_vertical"
                 android:textSize="20dp"
                 android:textColor="@color/white"/>
+
+            <ImageButton
+                android:id="@+id/btnMatch"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="15dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/calendar_match"/>
             <ImageButton
                 android:id="@+id/btnChat"
                 android:layout_width="wrap_content"
